<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">心灵茶坊</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="problem1">自我成长</string>
    <string name="problem2">情绪管理</string>
    <string name="problem3">人际沟通</string>
    <string name="problem4">恋爱婚姻</string>
    <string name="problem5">职场问题</string>
    <string name="problem6">亲子家庭</string>
    <string name="problem7">心理障碍</string>
    <string name="problem8">学习困扰</string>
    <string name="city1">北京市</string>
    <string name="city2">上海市</string>
    <string name="city3">天津市</string>
    <string name="city4">重庆市</string>
    <string name="city5">广州市</string>
    <string name="city6">深圳市</string>
    <string name="city7">武汉市</string>
    <string name="city8">西安市</string>
    <string name="city9">郑州市</string>
    <string name="city10">成都市</string>
    <string name="city11">杭州市</string>
    <string name="city12">沈阳市</string>
    <string name="city13">南京市</string>
    <string name="city14">长沙市</string>
    <string name="city15">昆明市</string>
    <string name="city16">青岛市</string>
    <string name="city17">合肥市</string>
    <string name="city18">济南市</string>
    <string name="city19">福州市</string>
    <string name="city20">太原市</string>
    <string name="problem0">不限</string>
    <string name="isNetwork">无数据，点击此处或标题栏刷新</string>
    <string name="dialog_error_title">错误</string>
	<string name="dialog_text_wait">请等待</string>
    <string name="dialog_message_title">提示</string>
    <string name="dialog_message_success">成功</string>
    
    <string name="error_login_error">登陆失败，请确认网络和用户名密码后重试</string>
    <string name="error_register_email_address_null">E-mail地址不可空</string>
    <string name="error_register_password_not_equals">两次输入密码不一致，请重新输入</string>
    <string name="error_register_password_null">密码不可为空</string>
    <string name="error_register_user_name_null">用户名不可空</string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
     
    <string name="forget_password_find_password_button">发送邮件</string>
    <string name="forget_password_send_email">已发送邮件</string>
    <string name="forget_password_email_error">邮件发送错误，请确认您的邮件地址</string>
    <string name="forget_password">忘记用户名或密码？</string>
     <string name="find_password">找回密码</string>
    
    <string name="input_password">请输入密码</string>
    <string name="input_password_agin">请再次输入密码</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_email">请输入您的邮箱</string>
    
    <string name="network_error">网络错误，请检查您的网络连接</string>
    
    <string name="login">登录</string>
    <string name="login_title">用户登录</string>
    
    <string name="register_title">用户注册</string>
    <string name="register">注册</string>
    <string name="register_input_user_email">请输入E-mail地址</string>
    
    
    <string name="success_register_success">注册成功</string>
    
    <string name="guanzhu">关注</string>
    <string name="fensi">粉丝</string>
    <string name="shoucang">我的收藏</string>
    <string name="xiaoxi">消息中心</string>
    <string name="zixun">订单管理</string>
    <string name="yijian">意见反馈</string>
    <string name="tuichu">退出账号</string>
    <string name="touxiang">头像</string>
    <string name="name">昵称</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="city">地区</string>
    <string name="introduction">简介</string>
    
    <string name="action_about_app_text">亲爱的用户您好，我是心灵茶坊的产品经理,感谢您使用此APP。欢迎对本APP提出您宝贵的意见和建议。</string>
    <string name="action_about_app__title">我要提意见:</string>
    <string name="action_about_app__hint">请在此输入您的意见~</string>
    <string name="action_about_app_submit">提交</string>
    <string name="action_about_app_submit_message_success">感谢您的提交。祝您生活愉快。</string>
    <string name="action_about_app_submit_message_error">非常抱歉，提交出错。</string>
    <string name="leave_app">确定要退出吗？</string>
    <string name="logout_confirm">确定要退出账号吗？</string>
    <string name="user_name_not_null">用户名不能为空！</string>
    <string name="unspport_message_type">暂不支持此类消息</string>
    
    <item name="tag_first" type="id"></item>
    <item name="tag_second" type="id"></item>

</resources>
