<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <com.example.fragment.TitleLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    ></com.example.fragment.TitleLayout>
            
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="5dip"
        android:textSize="18sp"
        android:textColor="@color/zitiyanse_hui"
        android:text="@string/action_about_app_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dip"
        android:textSize="18sp"
        android:textColor="@color/zitiyanse_hui"
        android:text="@string/action_about_app__title" />

    <EditText
        android:id="@+id/editText_about_app_user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="100"
        android:minLines="3"
        android:hint="@string/action_about_app__hint" >
    </EditText>

    <Button
        android:id="@+id/button_about_app_submit_user_input"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="9dip"
        android:layout_height="42dip"
        android:layout_width="110dip"
        android:textSize="18sp"
        android:textColor="#FFFFFFFF"
        android:text="@string/action_about_app_submit"
        android:background="@drawable/button_blue_selector"/>

    <ListView
        android:id="@+id/listView_user_back"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible" >
    </ListView>

</LinearLayout>