<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qianhui"
    android:orientation="vertical" >

        <com.example.fragment.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></com.example.fragment.TitleLayout>

        <RelativeLayout
            android:id="@+id/wode_ziliao"
            android:layout_width="match_parent"
            android:layout_height="70dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/common_list_bg"
            android:clickable="true" >

            <ImageView
                android:id="@+id/wode_tx"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="5dip"
                android:src="@drawable/touxiang" />

            <TextView
                android:id="@+id/textView_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/wode_tx"
                android:text="username"
                android:textColor="@color/zitiyanse_hui"
                android:textSize="20sp" />

        </RelativeLayout>
 
   <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:orientation="vertical"
            android:background="#FFFFFF"
	            >
            
       <LinearLayout
            android:id="@+id/m_fensi"
	        android:layout_width="match_parent"
	        android:layout_height="50dip"
	        android:orientation="horizontal"
	        android:paddingLeft="30dip"
	        android:clickable="true"
	        android:background="@drawable/common_list_bg">
	        <ImageView
	            android:layout_height="20dp"
	            android:layout_width="20dp"
	            android:src="@drawable/icon_fensi_2"
	            android:layout_gravity="center_vertical"/>
	        <TextView
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:layout_marginLeft="12dip"
	            android:text="@string/fensi"
	            android:textColor="@color/zitiyanse_hui"
	            android:textSize="18sp"
	            android:layout_gravity="center_vertical"
	            android:singleLine="true"
	            android:maxLines="1"
	            android:background="@null"/>
		
          </LinearLayout>
          
	        <View
	       android:layout_height="1px"
	       android:layout_width="match_parent"
	       android:layout_marginLeft="30dip"
	       android:layout_marginRight="30dip"
	       android:background="#ffdad7cf"
	       />
	     
          <LinearLayout
            android:id="@+id/m_guanzhu"
	        android:layout_width="match_parent"
	        android:layout_height="50dip"
	        android:orientation="horizontal"
	        android:paddingLeft="30dip"
	        android:clickable="true"
	        android:background="@drawable/common_list_bg">
	        <ImageView
	            android:layout_height="20dp"
	            android:layout_width="20dp"
	            android:src="@drawable/icon_fensi"
	            android:layout_gravity="center_vertical"/>
	        <TextView
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:layout_marginLeft="12dip"
	            android:text="@string/guanzhu"
	            android:textColor="@color/zitiyanse_hui"
	            android:textSize="18sp"
	            android:layout_gravity="center_vertical"
	            android:singleLine="true"
	            android:maxLines="1"
	            android:background="@null"/>
		
   </LinearLayout>
   
   		
   <View
       android:layout_height="1px"
       android:layout_width="match_parent"
       android:layout_marginLeft="30dip"
       android:layout_marginRight="30dip"
       android:background="#ffdad7cf"
       />
   <LinearLayout
       android:id="@+id/m_guanzhu_counselor"
       android:layout_width="match_parent"
       android:layout_height="50dip"
       android:orientation="horizontal"
       android:paddingLeft="30dip"
       android:background="@drawable/common_list_bg"
       android:clickable="true">
	   <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@drawable/icon_shoucang"
            android:layout_gravity="center_vertical"/>
       <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="12dip"
            android:text="关注咨询师"
	        android:textColor="@color/zitiyanse_hui"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:singleLine="true"
            android:maxLines="1"/>
		
   </LinearLayout>
 </LinearLayout>
 
    <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:orientation="vertical"
            android:background="#FFFFFF"
	            >
   
   		<LinearLayout
   		    android:id="@+id/xiaoxi"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/common_list_bg"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingLeft="30dip" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icon_xiaoxi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dip"
                android:background="@null"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/xiaoxi"
                android:textColor="@color/zitiyanse_hui"
                android:textSize="18sp" />
        </LinearLayout>
   <View
       android:layout_height="1px"
       android:layout_width="match_parent"
       android:layout_marginLeft="30dip"
       android:layout_marginRight="30dip"
       android:background="#ffdad7cf"
       />
   
   <LinearLayout
       android:id="@+id/zixun"
       android:layout_width="match_parent"
       android:layout_height="50dip"
       android:orientation="horizontal"
       android:paddingLeft="30dip"
       android:background="@drawable/common_list_bg"
       android:clickable="true">
	   <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@drawable/icon_zixun"
            android:layout_gravity="center_vertical"/>
       <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="12dip"
            android:text="@string/zixun"
	        android:textColor="@color/zitiyanse_hui"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:singleLine="true"
            android:maxLines="1"/>
		
   </LinearLayout>
 </LinearLayout>
 
    <LinearLayout
       android:id="@+id/user_payback"
       android:layout_width="match_parent"
       android:layout_height="50dip"
       android:layout_marginTop="15dip"
       android:orientation="horizontal"
       android:paddingLeft="30dip"
       android:background="@drawable/common_list_bg"
       android:clickable="true">
	   <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@drawable/icon_fankui"
            android:layout_gravity="center_vertical"/>
       <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="12dip"
            android:text="@string/yijian"
	        android:textColor="@color/zitiyanse_hui"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:singleLine="true"
            android:maxLines="1"/>
		
   </LinearLayout>
   
        <LinearLayout
       android:id="@+id/logout"
       android:layout_width="match_parent"
       android:layout_height="50dip"
       android:layout_marginTop="15dip"
       android:orientation="horizontal"
       android:paddingLeft="30dip"
       android:background="@drawable/common_list_bg"
       android:clickable="true">
	   <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:src="@drawable/icon_setting"
            android:layout_gravity="center_vertical"/>
       <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="12dip"
            android:text="@string/tuichu"
	        android:textColor="@color/zitiyanse_hui"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:singleLine="true"
            android:maxLines="1"/>
		
   </LinearLayout>

</LinearLayout>
